fix skills data structure

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_FRONTEND_URL=http://localhost:5400/api/v1
-REACT_APP_BACKEND_URL=http://localhost:5400/api/v1
+REACT_APP_BACKEND_URL=https://e-builder.onrender.com/api/v1
