--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.14.7",
     "react-type-animation": "^2.1.2",
+    "react-zoom-pan-pinch": "^3.1.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
