--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
+    "react-otp-input": "^3.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.14.7",
