--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react-dom": "^18.0.6",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "framer-motion": "^10.16.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.5.2",
     "react-otp-input": "^3.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
