--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.12",
     "@tanstack/react-query": "^4.13.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +14,8 @@
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "framer-motion": "^10.16.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-component-export-image": "^1.0.6",
@@ -23,6 +26,7 @@
     "react-otp-input": "^3.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
+    "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.14.7",
     "react-type-animation": "^2.1.2",
     "react-zoom-pan-pinch": "^3.1.0",
@@ -55,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jspdf": "^2.0.0",
     "tailwindcss": "^3.2.4"
   }
 }
